--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.17"
+    "vue": "^2.5.17",
+    "vux-loader": "^1.2.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.2.0",
@@ -17,7 +18,14 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
-    "vue-template-compiler": "^2.5.17"
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
+    "vue-loader": "^14.2.2",
+    "vue-router": "^3.0.2",
+    "vue-template-compiler": "^2.5.17",
+    "vuex": "^3.0.1",
+    "vux": "^2.9.2",
+    "yaml-loader": "^0.5.0"
   },
   "eslintConfig": {
     "root": true,
