--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "vconsole": "^3.2.0",
     "vue": "^2.5.17",
     "vux-loader": "^1.2.9"
   },
@@ -47,7 +48,7 @@
     }
   },
   "browserslist": [
-    "> 1%", 
+    "> 1%",
     "last 2 versions",
     "not ie <= 8"
   ]
